@@ -1,3 +1,11 @@
+** v4.43, 05.02.2020**
+* Take account to the new ElvUI Options update.
+* Added a chat alert for placed items.
+* Cleanup/Update my install file.
+* Try to fix an lua error in HealPrediction.
+* Remove Mover Transparency options.
+
+
 ** v4.42, 19.01.2020**
 * Fixed Aura positions in my Install.
 * Fixed a quest lua error. Damn tables >.<
