@@ -1,3 +1,11 @@
+[b][color=orange]v4.43[/color], 05.02.2020[/b][list]
+[*]Take account to the new ElvUI Options update.
+[*]Added a chat alert for placed items.
+[*]Cleanup/Update my install file.
+[*]Try to fix an lua error in HealPrediction.
+[*]Remove Mover Transparency options.[/list]
+
+
 [b][color=orange]v4.42[/color], 19.01.2020[/b][list]
 [*]Fixed Aura positions in my Install.
 [*]Fixed a quest lua error. Damn tables >.<[/list]
